--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 <body>
 <h1>Can Günyel</h1>
 <h2>Hakkımda</h2>
-<p>Hayatı hem seviyorum ve hem desevmiyorum</p>    
-</body>
-</html>
+<p>köpek insanıyım</p>
+<img src="kedi.jpg" alt="Kedi" title="kedi">
+<ol>
+    <li>Film</li>
+    <ul>
+        <li><a href="https://www.imdb.com/title/tt0485947/?ref_=fn_al_tt_2">Mr Nobody</a> </li>
+        <li>Ad Astra</li>
+    </ul>
+    <li>Dizi</li>
+    <ul>
+        <li>True Detective</li>
+        <li>After Life</li>
+    </ul>
+    <li>Kitap</li>
+    <ul>
+        <li><a href="https://www.goodreads.com/book/show/7093555-i-imizdeki-eytan?from_search=true&from_srp=true&qid=xune8cGBEO&rank=1">İçizimdeki Şeytan</a> </li>
+        <li>On Küçük Zenci
+        </li>
+    </ul>
+</ol>
